--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>safe-batch-environment-filter</artifactId>
-    <version>${revision}${changelist}</version>
+    <version>0.1</version>
     <packaging>hpi</packaging>
     <properties>
         <revision>0.1</revision>
@@ -33,7 +33,8 @@
         <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-    </scm>
+      <tag>safe-batch-environment-filter-0.1</tag>
+  </scm>
 
     <dependencies>
         <dependency>
