--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>safe-batch-environment-filter</artifactId>
-    <version>0.1</version>
+    <version>${revision}${changelist}</version>
     <packaging>hpi</packaging>
     <properties>
-        <revision>0.1</revision>
+        <revision>0.2</revision>
         <changelist>-SNAPSHOT</changelist>
         <jenkins.version>2.249.1</jenkins.version>
         <java.level>8</java.level>
@@ -33,7 +33,7 @@
         <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
         <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
         <url>https://github.com/${gitHubRepo}</url>
-      <tag>safe-batch-environment-filter-0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <dependencies>
