--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.72</version>
+    <version>5.18</version>
     <relativePath />
   </parent>
   <groupId>io.jenkins.plugins</groupId>
@@ -28,7 +28,7 @@
   <properties>
     <revision>0.2</revision>
     <changelist>-SNAPSHOT</changelist>
-    <jenkins.version>2.361.4</jenkins.version>
+    <jenkins.version>2.479.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
     <spotless.check.skip>false</spotless.check.skip>
     <useBeta>true</useBeta>
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>environment-filter-utils</artifactId>
-      <version>1.1</version>
+      <version>1.17.vc0054371f4a_f</version>
     </dependency>
   </dependencies>
   <repositories>
